--- a/index.html
+++ b/index.html
@@ -5,28 +5,26 @@
     <title>Welcome</title>
 </head>
 <body>
+        <h1> Question Form </h1>
+            <h2> Questionnaire </h2>
+        <div>
+                <p><span class="error">* required fields</span></p>
+                <form action="question.php" method="post">
+                    <div id="data">
 
-    <h1> Welcome </h1>
+                        <label for="questionName">Question Name: </label>
+                        <input type="text" name="questionName" id="questionName"><span class="error">* <?php echo $NameError; ?> </span> <br><br>
 
-           <h2> Login Form </h2>
-            <div>
-                <p><span class="error"> * required field</span></p>
-                <form action="display.php" method="post">
-                    <div>
-                        <label for="email">Email:</label>
-                        <input type="email" name="email" id="email"> <span class="error">* <?php echo $emailError;?></span><br><br>
+                        <label for="questionBody">Question Body: </label>
+                        <input type="text" name="questionBody" id="questionBody"><span class="error">* <?php echo $bodyError; ?> </span> <br><br>
 
-                        <label for="password">Password:</label>
-                        <input type="password" name="password" id="password"> <span class="error">* <?php echo $emailError;?></span><br><br>
+                        <label for="questionSkills">Question Skills: </label>
+                        <input type="text" name="questionSkills" id="questionSkills"><span class="error">* <?php echo $skillError; ?> </span> <br><br>
                     </div>
-                    <br>
-                    <input type="submit" value="Login">
-                    <p>Click below to Register</p>
-                    <p><a href="../Registration-Form/index.html">Register</a></p>
-
+                <br>
+                    <input type="submit" value="Submit">
                 </form>
-            </div>
+
+        </div>
 </body>
 </html>
-
-
